# forge

./: .gitignore  Cargo.toml  README.md
.reports/: codemap-diff.txt
docs/: CONTRIB.md  RUNBOOK.md
docs/codemaps/: architecture.md  backend.md  data.md  runtime.md
docs/plans/: 2026-02-19-forge-design.md  2026-02-19-forge-phase1-plan.md  2026-02-20-cpu-backend-design.md  2026-02-20-cpu-backend-plan.md  2026-02-22-phase2-performance-design.md  2026-02-22-phase2-performance-plan.md  2026-02-23-flash-attention-v2-design.md  2026-02-23-flash-attention-v2-plan.md  2026-02-23-gap-analysis-vllm-sglang.md
forge-backend/: Cargo.toml
forge-backend/forge-backend-cpu/: Cargo.toml
forge-backend/forge-backend-cpu/src/: backend.rs  lib.rs  tensor.rs
forge-backend/forge-backend-cpu/tests/: test_ops.rs
forge-backend/forge-backend-cuda/: Cargo.toml  build.rs
forge-backend/forge-backend-cuda/src/: attention.rs  backend.rs  flash_attention.rs  gpu_paged_cache.rs  lib.rs  tensor.rs
forge-backend/forge-backend-cuda/tests/: test_gpu_paged_cache.rs  test_kernels.rs  test_ops.rs  test_paged_attention.rs
forge-backend/src/: lib.rs
forge-core/: Cargo.toml
forge-core/src/: backend.rs  error.rs  kvcache.rs  lib.rs  model.rs  sampling.rs  scheduler.rs  tensor.rs  types.rs
forge-flash/: Cargo.toml  build.rs
forge-flash/csrc/: VENDORED.md  flash_api_forge.cu
forge-flash/csrc/flash_attn/src/: flash.h  flash_fwd_launch_template.h  philox_unpack.cuh
forge-flash/src/: lib.rs
forge-kernels/: Cargo.toml
forge-kernels/csrc/: flash_attn_wrapper.cu  flash_attn_wrapper.h
forge-kernels/src/: attention.rs  decode_attention.rs  elementwise.rs  lib.rs  memory.rs  norm.rs  paged_attention.rs  positional.rs
forge-kvcache/: Cargo.toml
forge-kvcache/src/: lib.rs  naive.rs  paged.rs  paged_cache.rs  radix.rs
forge-kvcache/tests/: test_paged.rs
forge-loader/: Cargo.toml
forge-loader/src/: config.rs  gguf.rs  gguf_dequant.rs  lib.rs  safetensors.rs
forge-loader/tests/: test_loader.rs
forge-models/forge-model-llama/: Cargo.toml
forge-models/forge-model-llama/src/: layers.rs  lib.rs  loader.rs  model.rs  rope.rs
forge-models/forge-model-llama/tests/: test_batch_forward.rs
forge-quantize/: Cargo.toml
forge-quantize/src/: lib.rs
forge-runtime/: Cargo.toml
forge-runtime/src/: engine.rs  lib.rs  sampling.rs
forge-runtime/src/constraints/: fsm.rs  json_schema.rs  mod.rs  regex.rs
forge-runtime/src/speculative/: mod.rs  ngram.rs  verifier.rs
forge-runtime/tests/: test_constraints.rs  test_sampling.rs
forge-scheduler/: Cargo.toml
forge-scheduler/src/: continuous.rs  lib.rs  sequence.rs
forge-scheduler/tests/: test_scheduler.rs
forge-server/: Cargo.toml
forge-server/src/: chat_template.rs  lib.rs  main.rs  tokenizer.rs
forge-server/src/api/: openai.rs  types.rs
forge-server/tests/: test_e2e.rs  test_tokenizer.rs
forge-transport/: Cargo.toml
forge-transport/src/: in_process.rs  lib.rs
scripts/: benchmark.sh  test_server.sh
tests/integration/: test_e2e.rs
