[package]
name = "forge-backend-cuda"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
# FlashAttention FFI integration. Requires CUDA toolkit for compiling the
# wrapper .cu file, and optionally FlashAttention library headers + .so.
# Falls back to naive attention when disabled or when the FFI call fails.
flash-attn = ["dep:tracing", "dep:cc"]

[dependencies]
forge-core.workspace = true
forge-kernels.workspace = true
cudarc = { version = "0.17", features = ["cublas", "nvrtc", "f16", "cuda-version-from-build-system"] }
half.workspace = true
tracing = { workspace = true, optional = true }

[build-dependencies]
cc = { version = "1", optional = true }
