[package]
name = "forge-model-llama"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
forge-core.workspace = true
forge-loader.workspace = true
tracing.workspace = true

[dev-dependencies]
forge-backend-cpu = { path = "../../forge-backend/forge-backend-cpu" }
forge-kvcache = { path = "../../forge-kvcache" }
